--- a/po/bg.po
+++ b/po/bg.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 3.0.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-03-21 09:07+0100\n"
+"POT-Creation-Date: 2020-03-22 19:03+0100\n"
 "PO-Revision-Date: 2018-11-12 20:51+0200\n"
 "Last-Translator: Мартин Петков <marto74bg@yahoo.co.uk>\n"
 "Language-Team: Bulgarian\n"
@@ -5756,6 +5756,15 @@ msgstr "Отвори настройки на тунера "
 msgid "Open the movie list"
 msgstr "Отвори списъка с филми"
 
+msgid "Operating LED status in deep standby mode"
+msgstr ""
+
+msgid "Operating LED status in standby mode"
+msgstr ""
+
+msgid "Operating LED status while running."
+msgstr ""
+
 msgid "Opkg"
 msgstr ""
 
@@ -8729,6 +8738,16 @@ msgstr "Смяна на канал надолу"
 msgid "Switch channel up"
 msgstr "Смяна на канал нагоре"
 
+msgid "Switch off the display during Standby Mode"
+msgstr ""
+
+msgid "Switch off the display during Suspend Mode"
+msgstr ""
+
+#, fuzzy
+msgid "Switch off the display during operation."
+msgstr "Списък с наличните разширения за настройка на екрана и интерфейса."
+
 msgid "Switch to TV mode"
 msgstr "Превключи към режим ТВ"
 
@@ -10462,6 +10481,20 @@ msgstr "С грешки:"
 msgid "With popup"
 msgstr "Със съобщение"
 
+#, fuzzy
+msgid "With this option you can switch off the display during operation."
+msgstr "Тази опция позволява да изключите дисплейя."
+
+msgid "With this option you can switch off the display in Deep Standby Mode."
+msgstr ""
+
+#, fuzzy
+msgid "With this option you can switch off the display in Standby Mode."
+msgstr "Тази опция позволява да изключите дисплейя."
+
+msgid "With this option you can switch the LED color or deactivate the LED."
+msgstr ""
+
 msgid "Without popup"
 msgstr "Без съобщение"
 
@@ -11742,6 +11775,9 @@ msgstr "вариететно шоу"
 
 msgid "vertical"
 msgstr "вертикална"
+
+msgid "violet"
+msgstr ""
 
 msgid "wait for ci..."
 msgstr "изчакай за ci..."
