--- a/po/el.po
+++ b/po/el.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenPLI Enigma2 Official Greek Translation\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-03-21 09:07+0100\n"
+"POT-Creation-Date: 2020-03-22 19:03+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: MCelliotG <mcelliotg@gmail.com>\n"
 "Language-Team: MCelliotG <mcelliotg@gmail.com>\n"
@@ -5693,6 +5693,15 @@ msgstr "Άνοιγμα ρυθμίσεων tuner "
 msgid "Open the movie list"
 msgstr "Επιστροφή στη λίστα ταινίων"
 
+msgid "Operating LED status in deep standby mode"
+msgstr ""
+
+msgid "Operating LED status in standby mode"
+msgstr ""
+
+msgid "Operating LED status while running."
+msgstr ""
+
 msgid "Opkg"
 msgstr "Opkg"
 
@@ -8632,6 +8641,16 @@ msgstr "Μεταφορά καναλιού προς τα κάτω"
 msgid "Switch channel up"
 msgstr "Μεταφορά καναλιού προς τα επάνω"
 
+msgid "Switch off the display during Standby Mode"
+msgstr ""
+
+msgid "Switch off the display during Suspend Mode"
+msgstr ""
+
+#, fuzzy
+msgid "Switch off the display during operation."
+msgstr "Εμφάνιση λίστας διαθέσιμων επεκτάσεων οθόνης και διεπαφής χρήστη."
+
 msgid "Switch to TV mode"
 msgstr "Αλλαγή σε λειτουργία TV"
 
@@ -10352,6 +10371,20 @@ msgstr "Με σφάλματα:"
 msgid "With popup"
 msgstr "Με αναδυόμενο παράθυρο"
 
+#, fuzzy
+msgid "With this option you can switch off the display during operation."
+msgstr "Αυτή η επιλογή επιτρέπει την απενεργοποίηση της οθόνης πρόσοψης."
+
+msgid "With this option you can switch off the display in Deep Standby Mode."
+msgstr ""
+
+#, fuzzy
+msgid "With this option you can switch off the display in Standby Mode."
+msgstr "Αυτή η επιλογή επιτρέπει την απενεργοποίηση της οθόνης πρόσοψης."
+
+msgid "With this option you can switch the LED color or deactivate the LED."
+msgstr ""
+
 msgid "Without popup"
 msgstr "Χωρίς αναδυόμενο παράθυρο"
 
@@ -11636,6 +11669,9 @@ msgstr "βαριετέ"
 
 msgid "vertical"
 msgstr "κάθετη"
+
+msgid "violet"
+msgstr ""
 
 msgid "wait for ci..."
 msgstr "αναμονή γα κοινή διεπαφή (ci)..."
