--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-03-21 09:09+0100\n"
+"POT-Creation-Date: 2020-03-22 19:03+0100\n"
 "PO-Revision-Date: 2020-03-17 01:28+0100\n"
 "Last-Translator: Jose Juan <jzapater@gmail.com>\n"
 "Language-Team: ANGELODOS  angelo2807@hotmail.com\n"
@@ -6362,6 +6362,15 @@ msgstr "Abrir sintonizador de configuración"
 msgid "Open the movie list"
 msgstr "Abrir la lista de películas"
 
+msgid "Operating LED status in deep standby mode"
+msgstr ""
+
+msgid "Operating LED status in standby mode"
+msgstr ""
+
+msgid "Operating LED status while running."
+msgstr ""
+
 msgid "Opkg"
 msgstr "Opkg"
 
@@ -9669,6 +9678,17 @@ msgstr "Cambiar canal hacia abajo"
 msgid "Switch channel up"
 msgstr "Cambiar canal"
 
+msgid "Switch off the display during Standby Mode"
+msgstr ""
+
+msgid "Switch off the display during Suspend Mode"
+msgstr ""
+
+#
+#, fuzzy
+msgid "Switch off the display during operation."
+msgstr "Ver la lista de extensiones de pantalla y de interfaz de usuario disponibles."
+
 msgid "Switch to TV mode"
 msgstr "Cambiar al modo de TV"
 
@@ -11578,6 +11598,20 @@ msgstr "Con errores:"
 msgid "With popup"
 msgstr "Con popup"
 
+#, fuzzy
+msgid "With this option you can switch off the display during operation."
+msgstr "Esta opción le permite apagar la pantalla."
+
+msgid "With this option you can switch off the display in Deep Standby Mode."
+msgstr ""
+
+#, fuzzy
+msgid "With this option you can switch off the display in Standby Mode."
+msgstr "Esta opción le permite apagar la pantalla."
+
+msgid "With this option you can switch the LED color or deactivate the LED."
+msgstr ""
+
 msgid "Without popup"
 msgstr "Sin popup"
 
@@ -13017,6 +13051,9 @@ msgstr "Espectáculo de variedades"
 #
 msgid "vertical"
 msgstr "vertical"
+
+msgid "violet"
+msgstr ""
 
 #
 msgid "wait for ci..."
