--- a/po/id.po
+++ b/po/id.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-03-21 09:07+0100\n"
+"POT-Creation-Date: 2020-03-22 19:03+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Budiarno Pedode\n"
 "Language-Team: \n"
@@ -5841,6 +5841,15 @@ msgstr "Buka pengaturan penala"
 msgid "Open the movie list"
 msgstr "Buka daftar film"
 
+msgid "Operating LED status in deep standby mode"
+msgstr ""
+
+msgid "Operating LED status in standby mode"
+msgstr ""
+
+msgid "Operating LED status while running."
+msgstr ""
+
 msgid "Opkg"
 msgstr ""
 
@@ -8850,6 +8859,16 @@ msgstr "Ganti kanal bawah"
 msgid "Switch channel up"
 msgstr "Ganti kanal atas"
 
+msgid "Switch off the display during Standby Mode"
+msgstr ""
+
+msgid "Switch off the display during Suspend Mode"
+msgstr ""
+
+#, fuzzy
+msgid "Switch off the display during operation."
+msgstr "Tinjau daftar ketersedaan ekstensi penampil dan antarmuka pengguna."
+
 msgid "Switch to TV mode"
 msgstr "Beralih ke mode TV"
 
@@ -10605,6 +10624,20 @@ msgstr "Dengan kesalahan:"
 msgid "With popup"
 msgstr "Dengan popup"
 
+#, fuzzy
+msgid "With this option you can switch off the display during operation."
+msgstr "Pilihan ini memungkinkan anda untuk mematikan layar."
+
+msgid "With this option you can switch off the display in Deep Standby Mode."
+msgstr ""
+
+#, fuzzy
+msgid "With this option you can switch off the display in Standby Mode."
+msgstr "Pilihan ini memungkinkan anda untuk mematikan layar."
+
+msgid "With this option you can switch the LED color or deactivate the LED."
+msgstr ""
+
 msgid "Without popup"
 msgstr "Tanpa popup"
 
@@ -11914,6 +11947,9 @@ msgstr "variety show"
 
 msgid "vertical"
 msgstr "vertical"
+
+msgid "violet"
+msgstr ""
 
 msgid "wait for ci..."
 msgstr "mengunggu ci..."
