--- a/po/lt.po
+++ b/po/lt.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PLi enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-03-21 09:07+0100\n"
-"PO-Revision-Date: 2020-02-29 08:52+0200\n"
+"POT-Creation-Date: 2020-03-22 19:05+0100\n"
+"PO-Revision-Date: 2020-03-21 11:23+0200\n"
 "Last-Translator: Audronis Grincevicius <adga45@gmail.com>\n"
 "Language-Team: Adga (C) <adga45@gmail.com>\n"
 "Language: lt_LT\n"
@@ -3078,7 +3078,7 @@ msgstr "KLAIDA - paieška nepavyko (%s)!"
 
 #, python-format
 msgid "ERROR downloading file %s"
-msgstr ""
+msgstr "KLAIDA, parsiunčiant failą %s"
 
 msgid "East"
 msgstr "Rytai"
@@ -3362,9 +3362,9 @@ msgstr "Eritrėja"
 msgid "Error"
 msgstr "Klaida"
 
-#, fuzzy, python-format
+#, python-format
 msgid "Error %s"
-msgstr "Klaida"
+msgstr "Klaida %s"
 
 msgid "Error code"
 msgstr "Klaidos kodas"
@@ -3399,13 +3399,10 @@ msgid "Error stop stream!"
 msgstr "Srauto stabdymo klaida!"
 
 msgid "Error when writing epg.dat on server"
-msgstr ""
+msgstr "Klaida, įrašant epg.dat serveryje"
 
-#, fuzzy
 msgid "Error while retreiving epg.dat from server"
-msgstr ""
-"Klaida atsisiunčiant atsarginio imtuvo laikmačio informaciją\n"
-"%s"
+msgstr "Klaida, ieškant epg.data iš serverio"
 
 #, python-format
 msgid ""
@@ -3415,11 +3412,8 @@ msgstr ""
 "Klaida atsisiunčiant atsarginio imtuvo laikmačio informaciją\n"
 "%s"
 
-#, fuzzy
 msgid "Error while retreiving location of epg.dat on server"
-msgstr ""
-"Klaida atsisiunčiant atsarginio imtuvo laikmačio informaciją\n"
-"%s"
+msgstr "Klaida atkūrus epg.dat vietą serveryje"
 
 #, python-format
 msgid ""
@@ -5427,7 +5421,7 @@ msgid "No displayable files on this medium found!"
 msgstr "Jokių failų čia nerasta!"
 
 msgid "No epg.dat file found server"
-msgstr ""
+msgstr "Failo epg.dat serveryje nerasta"
 
 msgid "No event info found, recording indefinitely."
 msgstr "Informacija apie įvykius nerasta, tęsiamas įrašymas."
@@ -5709,6 +5703,15 @@ msgstr "Atidaryti imtuvo konfigūravimą "
 
 msgid "Open the movie list"
 msgstr "Atidaryti filmų sąrašą"
+
+msgid "Operating LED status in deep standby mode"
+msgstr ""
+
+msgid "Operating LED status in standby mode"
+msgstr ""
+
+msgid "Operating LED status while running."
+msgstr ""
 
 msgid "Opkg"
 msgstr "Opkg"
@@ -7511,12 +7514,11 @@ msgstr "Pasirinkite simbolių rinkinį su virtualia klaviatūra"
 msgid "Select the virtual keyboard shifted character set for the next character only"
 msgstr "Pasirinkite tik pakeistą virtualios klaviatūros simbolių rinkinį"
 
-#, fuzzy
 msgid "Select timezone area or region."
-msgstr "Pasirinkite horizontalią rezoliuciją:"
+msgstr "Pasirinkite laiko juostos sritį arba regioną."
 
 msgid "Select timezone in the area or region."
-msgstr ""
+msgstr "Pasirinkite laiko juostą, savo srityje arba regione."
 
 msgid "Select update source"
 msgstr "Pasirinkite atnaujinimo šaltinį"
@@ -8654,6 +8656,16 @@ msgstr "Perjungti kanalą žemyn"
 msgid "Switch channel up"
 msgstr "Perjungti kanalą aukštyn"
 
+msgid "Switch off the display during Standby Mode"
+msgstr ""
+
+msgid "Switch off the display during Suspend Mode"
+msgstr ""
+
+#, fuzzy
+msgid "Switch off the display during operation."
+msgstr "Peržiūrėti sąrašą prieinamų monitoriaus ir vartotojo sąsajos priedų."
+
 msgid "Switch to TV mode"
 msgstr "Perjungti į TV režimą"
 
@@ -8733,7 +8745,7 @@ msgstr "T2MI RAW režimas"
 msgid "TRANSLATOR_INFO"
 msgstr ""
 "P&C Adga, adga45@gmail.com\n"
-"Pasvalys, 2020-02-29 versija"
+"Pasvalys, 2020-03-21 versija"
 
 msgid "TS file is too large for ISO9660 level 1!"
 msgstr "TS failas per didelis 1 lygio ISO9660!"
@@ -9294,9 +9306,8 @@ msgstr "Laiko poslinkis negalimas!"
 msgid "Timezone"
 msgstr "Laiko juosta"
 
-#, fuzzy
 msgid "Timezone area"
-msgstr "Laiko juosta"
+msgstr "Laiko juostos sritis"
 
 msgid "Timor-Leste"
 msgstr "Rytų Timoras"
@@ -10374,6 +10385,20 @@ msgstr "Su klaidomis:"
 
 msgid "With popup"
 msgstr "Su iškylančiu pranešimu"
+
+#, fuzzy
+msgid "With this option you can switch off the display during operation."
+msgstr "Ši parinktis leidžia jums išsijungti ekraną."
+
+msgid "With this option you can switch off the display in Deep Standby Mode."
+msgstr ""
+
+#, fuzzy
+msgid "With this option you can switch off the display in Standby Mode."
+msgstr "Ši parinktis leidžia jums išsijungti ekraną."
+
+msgid "With this option you can switch the LED color or deactivate the LED."
+msgstr ""
 
 msgid "Without popup"
 msgstr "Be iškylančio pranešimo"
@@ -11663,6 +11688,9 @@ msgstr "įvairūs šou"
 
 msgid "vertical"
 msgstr "vertikali"
+
+msgid "violet"
+msgstr ""
 
 msgid "wait for ci..."
 msgstr "laukite CI atsako..."
