--- a/po/nl.po
+++ b/po/nl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-03-21 09:07+0100\n"
+"POT-Creation-Date: 2020-03-22 19:03+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Frenske <voorzitter@openpli.org>\n"
 "Language-Team: PLiteam <translators@openpli.org>\n"
@@ -5903,6 +5903,15 @@ msgstr "Open tunerinstellingen "
 msgid "Open the movie list"
 msgstr "Open de opnamelijst"
 
+msgid "Operating LED status in deep standby mode"
+msgstr ""
+
+msgid "Operating LED status in standby mode"
+msgstr ""
+
+msgid "Operating LED status while running."
+msgstr ""
+
 msgid "Opkg"
 msgstr "Opkg"
 
@@ -8881,6 +8890,16 @@ msgstr "Schakel een zender terug"
 msgid "Switch channel up"
 msgstr "Schakel een zender verder"
 
+msgid "Switch off the display during Standby Mode"
+msgstr ""
+
+msgid "Switch off the display during Suspend Mode"
+msgstr ""
+
+#, fuzzy
+msgid "Switch off the display during operation."
+msgstr "Bekijk het overzicht van de beschikbare display- en gebruikersinterface applicaties."
+
 msgid "Switch to TV mode"
 msgstr "Schakel naar de TV modus"
 
@@ -10664,6 +10683,20 @@ msgstr "Met fouten:"
 msgid "With popup"
 msgstr "Met popup"
 
+#, fuzzy
+msgid "With this option you can switch off the display during operation."
+msgstr "Deze instelling biedt de optie om het display uit te schakelen."
+
+msgid "With this option you can switch off the display in Deep Standby Mode."
+msgstr ""
+
+#, fuzzy
+msgid "With this option you can switch off the display in Standby Mode."
+msgstr "Deze instelling biedt de optie om het display uit te schakelen."
+
+msgid "With this option you can switch the LED color or deactivate the LED."
+msgstr ""
+
 msgid "Without popup"
 msgstr "Zonder popup"
 
@@ -11956,6 +11989,9 @@ msgstr "Variété/Show"
 
 msgid "vertical"
 msgstr "verticaal"
+
+msgid "violet"
+msgstr ""
 
 msgid "wait for ci..."
 msgstr "wacht op CI..."
