--- a/po/ru.po
+++ b/po/ru.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-03-21 09:07+0100\n"
+"POT-Creation-Date: 2020-03-22 19:03+0100\n"
 "PO-Revision-Date: 2019-07-25 17:52+0300\n"
 "Last-Translator: Dimitrij <Dima-73@inbox.lv>\n"
 "Language-Team: openPLi Dimitrij\n"
@@ -5713,6 +5713,15 @@ msgstr "Открыть настройки тюнера "
 msgid "Open the movie list"
 msgstr "Открыть список видео"
 
+msgid "Operating LED status in deep standby mode"
+msgstr ""
+
+msgid "Operating LED status in standby mode"
+msgstr ""
+
+msgid "Operating LED status while running."
+msgstr ""
+
 msgid "Opkg"
 msgstr "Opkg"
 
@@ -8657,6 +8666,16 @@ msgstr "Сменить канал вниз"
 msgid "Switch channel up"
 msgstr "Сменить канал вверх"
 
+msgid "Switch off the display during Standby Mode"
+msgstr ""
+
+msgid "Switch off the display during Suspend Mode"
+msgstr ""
+
+#, fuzzy
+msgid "Switch off the display during operation."
+msgstr "Просмотр списка доступных дополнений настроек экрана и интерфейса."
+
 msgid "Switch to TV mode"
 msgstr "Перейти к режиму ТВ"
 
@@ -10374,6 +10393,20 @@ msgstr "С ошибками:"
 msgid "With popup"
 msgstr "С сообщением"
 
+#, fuzzy
+msgid "With this option you can switch off the display during operation."
+msgstr "Эта опция позволяет отключить дисплей."
+
+msgid "With this option you can switch off the display in Deep Standby Mode."
+msgstr ""
+
+#, fuzzy
+msgid "With this option you can switch off the display in Standby Mode."
+msgstr "Эта опция позволяет отключить дисплей."
+
+msgid "With this option you can switch the LED color or deactivate the LED."
+msgstr ""
+
 msgid "Without popup"
 msgstr "Без сообщения"
 
@@ -11659,6 +11692,9 @@ msgstr "шоу варьете"
 
 msgid "vertical"
 msgstr "вертикальная"
+
+msgid "violet"
+msgstr ""
 
 msgid "wait for ci..."
 msgstr "ожидание для ci..."
