--- a/po/sl.po
+++ b/po/sl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Project Slovenia\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-03-21 09:07+0100\n"
+"POT-Creation-Date: 2020-03-22 19:03+0100\n"
 "PO-Revision-Date: 2015-08-30 09:00+0200\n"
 "Last-Translator: Taykun345 <support@satnigmo.com>\n"
 "Language-Team: Satnigmo <support@satnigmo.com>\n"
@@ -6609,6 +6609,15 @@ msgstr ""
 msgid "Open the movie list"
 msgstr "Odprtje seznama posnetkov"
 
+msgid "Operating LED status in deep standby mode"
+msgstr ""
+
+msgid "Operating LED status in standby mode"
+msgstr ""
+
+msgid "Operating LED status while running."
+msgstr ""
+
 msgid "Opkg"
 msgstr ""
 
@@ -10118,6 +10127,17 @@ msgstr "Preklop na prejšnji kanal"
 msgid "Switch channel up"
 msgstr "Preklop na naslednji kanal"
 
+msgid "Switch off the display during Standby Mode"
+msgstr ""
+
+msgid "Switch off the display during Suspend Mode"
+msgstr ""
+
+#
+#, fuzzy
+msgid "Switch off the display during operation."
+msgstr "Ogled seznama obstoječih Display in UserInterface vtičnikov."
+
 msgid "Switch to TV mode"
 msgstr "Preklop v način TV"
 
@@ -12049,6 +12069,18 @@ msgstr ""
 msgid "With popup"
 msgstr "Z obvestilom"
 
+msgid "With this option you can switch off the display during operation."
+msgstr ""
+
+msgid "With this option you can switch off the display in Deep Standby Mode."
+msgstr ""
+
+msgid "With this option you can switch off the display in Standby Mode."
+msgstr ""
+
+msgid "With this option you can switch the LED color or deactivate the LED."
+msgstr ""
+
 msgid "Without popup"
 msgstr "Brez obvestila"
 
@@ -13517,6 +13549,9 @@ msgstr ""
 #
 msgid "vertical"
 msgstr "Vertikalna"
+
+msgid "violet"
+msgstr ""
 
 #
 msgid "wait for ci..."
