--- a/po/uk.po
+++ b/po/uk.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-03-21 09:07+0100\n"
+"POT-Creation-Date: 2020-03-22 19:03+0100\n"
 "PO-Revision-Date: 2016-11-17 12:51+0200\n"
 "Last-Translator: vovan43<vovan43@ex.ua>, sety <tim1065@mail.ru>, Irkoff <irkoff@gmail.com>\n"
 "Language-Team: gisclub.tv <http://gisclub.tv/>\n"
@@ -5832,6 +5832,15 @@ msgstr "Відкрити налаштування тюнера"
 msgid "Open the movie list"
 msgstr "Відкрити список відео"
 
+msgid "Operating LED status in deep standby mode"
+msgstr ""
+
+msgid "Operating LED status in standby mode"
+msgstr ""
+
+msgid "Operating LED status while running."
+msgstr ""
+
 msgid "Opkg"
 msgstr ""
 
@@ -8853,6 +8862,16 @@ msgstr "Перемикання каналу вниз"
 msgid "Switch channel up"
 msgstr "Перемикання каналу вгору"
 
+msgid "Switch off the display during Standby Mode"
+msgstr ""
+
+msgid "Switch off the display during Suspend Mode"
+msgstr ""
+
+#, fuzzy
+msgid "Switch off the display during operation."
+msgstr "Перегляд списку доступних доповнень налаштувань екрану і інтерфейсу"
+
 msgid "Switch to TV mode"
 msgstr "Перемикання в режим TV"
 
@@ -10644,6 +10663,18 @@ msgstr "З помилками:"
 msgid "With popup"
 msgstr "З повідомленням"
 
+msgid "With this option you can switch off the display during operation."
+msgstr ""
+
+msgid "With this option you can switch off the display in Deep Standby Mode."
+msgstr ""
+
+msgid "With this option you can switch off the display in Standby Mode."
+msgstr ""
+
+msgid "With this option you can switch the LED color or deactivate the LED."
+msgstr ""
+
 msgid "Without popup"
 msgstr "Без повідомлення"
 
@@ -11954,6 +11985,9 @@ msgstr "шоу вар'єте"
 
 msgid "vertical"
 msgstr "вертикальна"
+
+msgid "violet"
+msgstr ""
 
 msgid "wait for ci..."
 msgstr "очікування ci..."
