--- a/po/cs.po
+++ b/po/cs.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenPLi enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-03-21 09:07+0100\n"
+"POT-Creation-Date: 2020-03-22 19:03+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: ims <ims21@users.sourceforge.net>\n"
 "Language-Team: PLi <ims@openpli.org>\n"
@@ -6554,6 +6554,15 @@ msgstr "Otevřít nastavení tuneru "
 msgid "Open the movie list"
 msgstr "Otevřít seznam filmů"
 
+msgid "Operating LED status in deep standby mode"
+msgstr ""
+
+msgid "Operating LED status in standby mode"
+msgstr ""
+
+msgid "Operating LED status while running."
+msgstr ""
+
 msgid "Opkg"
 msgstr ""
 
@@ -9982,6 +9991,17 @@ msgstr "Přepnout kanál dolů"
 msgid "Switch channel up"
 msgstr "Přepnout kanál nahoru"
 
+msgid "Switch off the display during Standby Mode"
+msgstr ""
+
+msgid "Switch off the display during Suspend Mode"
+msgstr ""
+
+#
+#, fuzzy
+msgid "Switch off the display during operation."
+msgstr "Zobrazit seznam rozšíření pro zobrazení a uživatelské rozhraní"
+
 msgid "Switch to TV mode"
 msgstr "Přepnout do TV módu"
 
@@ -11906,6 +11926,20 @@ msgstr "S chybami:"
 msgid "With popup"
 msgstr "S dialogem"
 
+#, fuzzy
+msgid "With this option you can switch off the display during operation."
+msgstr "Toto nastavení umožňuje vypnout displej."
+
+msgid "With this option you can switch off the display in Deep Standby Mode."
+msgstr ""
+
+#, fuzzy
+msgid "With this option you can switch off the display in Standby Mode."
+msgstr "Toto nastavení umožňuje vypnout displej."
+
+msgid "With this option you can switch the LED color or deactivate the LED."
+msgstr ""
+
 msgid "Without popup"
 msgstr "Bez dialogu"
 
@@ -13384,6 +13418,9 @@ msgstr "varieté"
 #
 msgid "vertical"
 msgstr "Vertikální"
+
+msgid "violet"
+msgstr ""
 
 #
 msgid "wait for ci..."
