--- a/po/fr.po
+++ b/po/fr.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-03-21 09:07+0100\n"
-"PO-Revision-Date: 2020-03-21 09:12+0100\n"
+"POT-Creation-Date: 2020-03-22 19:03+0100\n"
+"PO-Revision-Date: 2020-03-22 19:15+0100\n"
 "Last-Translator: Pr2\n"
 "Language-Team: french\n"
 "Language: fr\n"
@@ -5689,6 +5689,15 @@ msgstr "Ouvrir la configuration du tuner "
 msgid "Open the movie list"
 msgstr "Ouvrir la liste de films"
 
+msgid "Operating LED status in deep standby mode"
+msgstr "État de la LED de fonctionnement en veille profonde"
+
+msgid "Operating LED status in standby mode"
+msgstr "État de la LED de fonctionnement en veille"
+
+msgid "Operating LED status while running."
+msgstr "État de la LED de fonctionnement en activité"
+
 msgid "Opkg"
 msgstr "Opkg"
 
@@ -8627,6 +8636,15 @@ msgstr "Basculer vers la chaîne suivante"
 msgid "Switch channel up"
 msgstr "Basculer vers la chaîne précédente"
 
+msgid "Switch off the display during Standby Mode"
+msgstr "Éteindre l’écran en mode veille"
+
+msgid "Switch off the display during Suspend Mode"
+msgstr ""
+
+msgid "Switch off the display during operation."
+msgstr "Eteindre l’affichage en fonctionnement."
+
 msgid "Switch to TV mode"
 msgstr "Basculer en mode TV"
 
@@ -8713,7 +8731,7 @@ msgstr ""
 "\n"
 "Traducteur: Pr2\n"
 "Support: www.openpli.org\n"
-"Dernière MAJ: 21-03-2020"
+"Dernière MAJ: 22-03-2020"
 
 msgid "TS file is too large for ISO9660 level 1!"
 msgstr "Fichier TS trop grand pour le niveau 1 ISO9660!"
@@ -10357,6 +10375,18 @@ msgstr "Avec erreurs:"
 msgid "With popup"
 msgstr "Avec le popup"
 
+msgid "With this option you can switch off the display during operation."
+msgstr "Avec cette option, vous pouvez éteindre l’affichage en fonctionnement."
+
+msgid "With this option you can switch off the display in Deep Standby Mode."
+msgstr "Avec cette option vous pouvez désactiver l’écran en mode veille profonde."
+
+msgid "With this option you can switch off the display in Standby Mode."
+msgstr "Avec cette option, vous pouvez désactiver l’affichage en mode veille."
+
+msgid "With this option you can switch the LED color or deactivate the LED."
+msgstr "Avec cette option, vous pouvez changer la couleur LED ou désactiver la LED."
+
 msgid "Without popup"
 msgstr "Sans le popup"
 
@@ -11643,6 +11673,9 @@ msgstr "Spectacle de variété"
 
 msgid "vertical"
 msgstr "Verticale"
+
+msgid "violet"
+msgstr "violet"
 
 msgid "wait for ci..."
 msgstr "Attente pour ci..."
